# EchoMind

./: main.py  pyproject.toml
data/: test.txt
src/: AgentCore.py  ContextEngine.py  DataModels.py  app.py  temp.json  temp.md  test.py  流程2.md
src/llama_index_c/: llama_index_c.py
src/temp/: ActionExecutor.py  ContextEngine.py  DataModels.py  temp.json  文字解析提示词.md  流程.md
