[project]
name = "echomind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "llama-index>=0.12.49",
    "llama-index-embeddings-google-genai>=0.2.1",
    "llama-index-llms-google-genai>=0.2.4",
    "python-dotenv>=1.1.1",
    "uvicorn[standard]>=0.35.0",
]
